# data-ingestion

./: .flake8  .gitignore  LICENSE  README.md  dash.json  deploy.sh  mkdocs.yml  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml  docs.yml  layer.yml  lint.yml  test.yml
devops/: deploy.sh  helpers.sh
docs/: index.md
docs/api/: service_ridership_dashboard.md
docs/api/gtfs/: enqueue.md  gtfs.md  ingest.md  utils.md
docs/api/service_ridership_dashboard/: gtfs.md  ingest.md  queries.md  ridership.md  s3.md  service_levels.md  service_summaries.md  summary.md  time_series.md
ingestor/: .gitignore  TestSharepoint.py  app.py
ingestor/.chalice/: bluebikes-policy.json  config.json  dynamo_tables.json  envvars.json  policy-agg-tables.json  policy-agg-trip-metric-tables.json  policy-alert-delays.json  policy-alerts.json  policy-bluebikes-calc.json  policy-bluebikes-store.json  policy-bus-trip-metrics.json  policy-daily-table.json  policy-delivered-trip-metrics-daily.json  policy-gtfs.json  policy-lamp-ingest.json  policy-landing-data.json  policy-newtrains.json  policy-ridership.json  policy-scheduled-speed.json  policy-service-ridership-dashboard.json  policy-speed-restrictions.json  policy-store-parking-data.json  policy-time-predictions.json  policy-trip-metrics.json  policy-update-scheduled-speed.json  policy-weather.json  policy-yankee.json  resources.json
ingestor/chalicelib/: MbtaPerformanceAPI.py  agg_speed_tables.py  alerts.py  bluebikes.py  bus_speeds.py  car_ages.py  constants.py  daily_speeds.py  date_utils.py  dynamo.py  keys.py  lamp_events.py  landing.py  line_traversal.py  new_trains.py  parallel.py  populate_tables.py  predictions.py  s3.py  s3_alerts.py  schedule_adherence.py  scheduled_speed.py  speed_restrictions.py  stations.py  test.json  update_agg_tables.py  yankee.py
ingestor/chalicelib/delays/: __init__.py  aggregate.py  process.py
ingestor/chalicelib/ferry/: arcgis.py  config.py  disk.py  ingest.py  load_constants.py  process.py  s3.py  util.py
ingestor/chalicelib/gtfs/: __init__.py  enqueue.py  ingest.py  lines.json  lines.py  models.py  utils.py
ingestor/chalicelib/lamp/: __init__.py  ingest.py  utils.py
ingestor/chalicelib/parking/: __init__.py  ingest.py  overpass.py
ingestor/chalicelib/reliability/: aggregate.py  process.py  types.py
ingestor/chalicelib/ridership/: __init__.py  arcgis.py  box.py  config.py  dynamo.py  gtfs.py  ingest.py  process.py  sharepoint.py
ingestor/chalicelib/service_ridership_dashboard/: .gitignore  __init__.py  config.py  generate.py  generate_old.py  gtfs.py  ingest.py  queries.py  ridership.py  ridership_old.py  s3.py  service_levels.py  service_summaries.py  summary.py  time.py  time_series.py  types.py  util.py
(+36 files in other folders)
