[tool.poetry]
name = "data-ingestion"
version = "0.1.3"
description = ""
authors = ["TransitMatters Labs Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
requests = "^2.32.5"
pytz = "^2025.2"
boto3 = "~1.38.33"
numpy = "~2.2.6"
pandas = "~2.2.3"
geopy = "^2.4.1"
python-dotenv = "^1.1.1"
mbta-gtfs-sqlite = "^1.1.1"
boxsdk = "^3.14.0"
openpyxl = "^3.1.5"
dynamodb-json = "^1.4.2"
datadog_lambda = "8.114.0"
tqdm = "^4.67.1"
click = "^8.2.1"
spacy = "^3.8.7"
rapidfuzz = "^3.14.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
chalice = "~1.32.0"
flake8 = "^7.3.0"
black = "^25.9.0"
pytest = "~8.4.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"

[tool.black]
line-length = 120
target-version = ['py313']

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
