[project]
name = "data-ingestion"
version = "0.1.3"
description = ""
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "requests>=2.32.5,<3",
    "pytz>=2025.2,<2026",
    "boto3~=1.38.33",
    "numpy~=2.2.6",
    "pandas~=2.2.3",
    "geopy>=2.4.1,<3",
    "python-dotenv>=1.1.1,<2",
    "mbta-gtfs-sqlite>=1.1.1,<2",
    "openpyxl>=3.1.5,<4",
    "dynamodb-json>=1.4.2,<2",
    "datadog_lambda~=8.116.0",
    "tqdm>=4.67.1,<5",
    "click>=8.2.1,<9",
]

[dependency-groups]
dev = [
    "chalice~=1.32.0",
    "ruff>=0.14.6",
    "pytest~=9.0.1",
    "pre-commit>=4.4.0",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.27",
]
[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
